--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <script src="./js/script.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>A Markdown Previewer</title>
 <div id="root"></div>
 
 <!-- Uncomment this for testing -->
